fix: make 'structured content' title more opaque so its clearly visible over content

--- a/packages/super-editor/src/assets/styles/extensions/structured-content.css
+++ b/packages/super-editor/src/assets/styles/extensions/structured-content.css
@@ -22,7 +22,7 @@
   border: 1px solid #629be7;
   border-bottom: none;
   border-radius: 6px 6px 0 0;
-  background-color: #629be733;
+  background-color: #629be7dd;
   z-index: 10;
   cursor: grab;
   display: none;
